--- a/index.html
+++ b/index.html
@@ -1,125 +1,204 @@
 <!DOCTYPE html>
+
 <html>
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="header.css">
-    <title>Home</title>
-</head>
-<body>
-    <div class="main">
-        <div class="header">
-            <div class="header-wrapped">
-                <a href="#"><img src="logo.png" alt="" class="logo"></a>
-                <div class="menu">
-                    <div class="search">
-                        <input type="text" id="search-input" class="search-input" required>
-                        <span class="search-icon"><img src="751463.png" alt=""></span>
-                      </div>
-                      
-                  <div class="navbar">
-                    <ul>
-                        <a href="/index.html"><li>Home</li></a>
-                        <a href=""><li>Company Profile</li></a>
-                        <a href="/index1.html"><li>Products</li></a>
-                        <a href=""><li>Services</li></a>
-                        <a href=""><li>R&D</li></a>
-                        <a href="/index3.html"><li>Contact</li></a>
-                    </ul>
-                  </div>
-                </div>
+  <head>
+    <meta charset="utf-8" />
+    <title>Homepage</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      async
+      src="https://kit.fontawesome.com/54bb8b5ea5.js"
+      crossorigin="anonymous"
+    ></script>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0"
+    />
+    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="responsive.css" />
+  </head>
+
+  <body>
+    <div class="container">
+      <div class="header">
+        <div class="head">
+          <div class="top-logo-img">
+            <img class="burger-menu" src="./img/menu.svg" />
+            <img class="logotip" src="img/logo.png" />
+          </div>
+          <div class="HeadSearch">
+            <div class="search">
+              <input class="SearchInput" type="text" placeholder="Search" />
+              <img class="SearchIcon" src="img/ico_search.png" />
             </div>
-            <div class="text-head">
-                <h1>Agridera Seeds and Agriculture Ltd</h1>
-                <button class="but_read">READ MORE</button>
-            </div>
-            <div class="selector">       
-                <div class="scrollbar">
-                    <ul class="row">
-                        <a href=""><li><img src="Vector.svg" alt="Wheat"> <br> Wheat</li></a>
-                        <a href=""><li><img src="Group 3.svg" alt="Confection Watermelon"><br> Confection Watermelon</li></a>
-                        <a href=""><li><img src="Vector-1.svg" alt="Clover"><br> Clover</li></a>
-                        <a href=""><li><img src="Vector-2.svg" alt="Confection Sunflower"><br> Confection Sunflower</li></a>
-                        <a href=""><li><img src="Vector-3.svg" alt="Tomato"><br> Tomato</li></a>
-                        <a href=""><li><img src="Component 1.svg" alt="Eggplant P/O"><br> Eggplant P/O</li></a>
-                        <a href=""><li><img src="Group 5.svg" alt="Ornamental Sunflower"><br> Ornamental Sunflower</li></a>
-                    </ul>
-                </div>
-            </div> 
-            <div class="content">
-                <div class="bloc">
-                    <div class="text_bloc">
-                    <h2>Vision</h2>
-                    <p>We believe in long-term growth with an emphasis on the potential of emerging markets. We also support the global need of feeding the growing population.</p>
-                    </div>
-                    <img src="image 3.png" alt="">
-                </div>
-                <div class="bloc">
-                    <img src="btn_play.png" alt="">
-                    <div class="text_bloc">
-                    <h2>Mission</h2>
-                    <p>Breeding and marketing seeds for advanced field crops and vegetable varieties that provide an added value to all supply chain partners.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="selector_foot">
-                <div class="foot">
-                    <h3>Agridera's main activities</h3>
-                    <div class="image_foot">
-                        <div class="catton">
-                            <img src="image 4.png" alt="">
-                            <div class="text_foot">
-                                <h4>Open field crop seeds</h4>
-                                <hr style="border: none; height: 2px; background-color: #418036; width: 165px;">
-                                <p>wheat, cotton, legumes, hybrid confection sunflower</p>
-                            </div>
-                        </div>
-                        <div class="tomat">
-                            <img src="image 5.png" alt="">
-                            <div class="text_foot">
-                                <h4>Vegetable seeds</h4>
-                                <hr style="border: none; height: 2px; background-color: #418036; width: 165px;">
-                                <p>hybrid open field tomatoes, eggplant, onion, paprika, etc.</p>
-                            </div>
-                        </div>
-                        <div class="sunflowers">
-                            <img src="3 1.png" alt="">
-                            <div class="text_foot">
-                                <h4>Ornamental seeds</h4>
-                                <hr style="border: none; height: 2px; background-color: #418036; width: 165px;">
-                                <p>hybrid cut sunflowers, hybrid  patio tomatoes, Bells of Irland, etc.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <footer>
-                <div class="links">
-                    <div class="navbar_foot">
-                        <ul>
-                            <a href="/index.html"><li>PROFILE</li></a>
-                            <a href=""><li>MANAGMENT</li></a>
-                            <a href=""><li>PRODUCTS</li></a>
-                            <a href=""><li>R&D</li></a>
-                            <a href=""><li>LINKS</li></a>
-                            <a href=""><li>SITEMAP</li></a>
-                            <a href=""><li>CONTACT</li></a>
-                        </ul>
-                      </div>
-                      <div class="social">
-                        <ul class="ros">
-                            <a href=""><li><img src="Ico_in.svg" alt="in"></li></a>
-                            <a href=""><li><img src="Ico_inst.svg" alt="instagram"></li></a>
-                            <a href=""><li><img src="Ico_tube.svg" alt="youtube"></li></a>
-                            <a href=""><li><img src="Ico_tw.svg" alt="twitter"></li></a>
-                            <a href=""><li><img src="Ico_fb.svg" alt="facebook"></li></a>
-                        </ul>
-                    </div>
-                </div>
-                <div class="foter">
-                    <p>AGRIDERA SEEDS & AGRICULTURE LTD. © 2020</p>
-                </div>
-            </footer>
+            <ul class="Menu">
+              <li class="MenuItem">Home</li>
+              <li class="MenuItem">Company Profile</li>
+              <li class="MenuItem"><a href="./index1.html">Products</a></li>
+              <li class="MenuItem">Services</li>
+              <li class="MenuItem">R&D</li>
+              <li class="MenuItem"><a href="./index3.html">Contact</a></li>
+            </ul>
+          </div>
         </div>
+        <div class="headcontant">
+          <div class="headtext">Agridera Seeds and Agriculture Ltd</div>
+          <div>
+            <button class="headButton">READ MORE</button>
+          </div>
+        </div>
+      </div>
+      <div class="middle">
+        <ul class="MiddleList">
+          <li class="MiddleItem">
+            <img class="MiddleIco" src="img/1.svg" />
+            <p>Wheat</p>
+          </li>
+          <li class="MiddleItem">
+            <img class="MiddleIco" src="img/2.svg" />
+            <p>Confection Watermelon</p>
+          </li>
+          <li class="MiddleItem">
+            <img class="MiddleIco" src="img/3.svg" />
+            <p>Clover</p>
+          </li>
+          <li class="MiddleItem">
+            <img class="MiddleIco" src="img/4.svg" />
+            <p>Confection Sunflower</p>
+          </li>
+          <li class="MiddleItem">
+            <img class="MiddleIco" src="img/5.svg" />
+            <p>Tomato</p>
+          </li>
+          <li class="MiddleItem">
+            <img class="MiddleIco" src="img/6.svg" />
+            <p>Eggplant P/O</p>
+          </li>
+          <li class="MiddleItem">
+            <img class="MiddleIco" src="img/7.svg" />
+            <p>Ornamental Sunflower</p>
+          </li>
+        </ul>
+
+        <div class="content-first">
+          <div class="bg-content">
+            <div id="block-first">
+              <div id="block-first-first">
+                <h1>Vision</h1>
+                <img src="img/cross.svg" />
+                <p>
+                  We believe in long-term growth with an emphasis on the
+                  potential of emerging markets. We also support the global need
+                  of feeding the growing population.
+                </p>
+              </div>
+              <img id="first-img" src="img/image 3.png" />
+            </div>
+            <div id="block-second">
+              <div id="img-content-second">
+                <img src="img/image 2.png" />
+              </div>
+              <div id="block-second-first">
+                <h1>Mission</h1>
+                <img src="img/cross.svg" />
+                <p>
+                  Breeding and marketing seeds for advanced field crops and
+                  vegetable varieties that provide an added value to all supply
+                  chain partners.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="content-second">
+          <h1>Agridera's main activities</h1>
+          <img src="img/cross.svg" />
+          <div id="content-second-block">
+            <div>
+              <figure>
+                <img src="img/image 4.png" />
+                <figcaption>Open field crop seeds</figcaption>
+              </figure>
+              <img src="img/line.svg" />
+              <p id="figure-1">
+                wheat, cotton, legumes, hybrid confection sunflower
+              </p>
+            </div>
+            <div>
+              <figure>
+                <img src="img/image 5.png" />
+                <figcaption>Vegetable seeds</figcaption>
+              </figure>
+              <img src="img/line.svg" />
+              <p id="figure-2">
+                hybrid open field tomatoes, eggplant, onion, paprika, etc.
+              </p>
+            </div>
+            <div>
+              <figure>
+                <img src="img/image 6.png" />
+                <figcaption>Ornamental seeds</figcaption>
+              </figure>
+              <img class="LowerIcons" src="img/line.svg" />
+              <p id="figure-3">
+                hybrid cut sunflowers, hybrid patio tomatoes, Bells of Irland,
+                etc.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <footer>
+        <div id="footer_first">
+          <div>
+            <ul>
+              <li><a href="#">Profile</a></li>
+              <li><a href="#">Managment</a></li>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">R&D</a></li>
+              <li><a href="#">Links</a></li>
+              <li><a href="#">Sitemap</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+
+          <div id="icons">
+            <a href="#"><img src="./img/Ico_fb.svg" alt="" /></a>
+            <a href="#"><img src="./img/Ico_inst.svg" alt="" /></a>
+            <a href="#"><img src="./img/Ico_tube.svg" alt="" /></a>
+            <a href="#"><img src="./img/Ico_tw.svg" alt="" /></a>
+            <a href="#"><img src="./img/linkedin 5 4.svg" alt="" /></a>
+          </div>
+        </div>
+        <div id="footer_second">
+          <p>AGRIDERA SEEDS & AGRICULTURE LTD. © 2020</p>
+        </div>
+      </footer>
     </div>
-</body>
+  </body>
 </html>
