--- a/index1.html
+++ b/index1.html
@@ -1,185 +1,144 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="header.css">
-    <title>Tomato all</title>
-</head>
-<body>
-    <div class="main">
-        <div class="headepr">
-            <div class="header-wrapped">
-                <a href="#"><img src="logo.png" alt="" class="logo"></a>
-                <div class="menu">
-                    <div class="search">
-                        <input type="text" id="search-input" class="search-input" required>
-                        <span class="search-icon"><img src="751463.png" alt=""></span>
-                      </div>
-                    <div class="navbar">
-                    <ul>
-                        <a href="/index.html"><li>Home</li></a>
-                        <a href=""><li>Company Profile</li></a>
-                        <a href="/index1.html"><li>Products</li></a>
-                        <a href=""><li>Services</li></a>
-                        <a href=""><li>R&D</li></a>
-                        <a href="/index3.html"><li>Contact</li></a>
-                    </ul>
-                </div>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tomato one</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      async
+      src="https://kit.fontawesome.com/54bb8b5ea5.js"
+      crossorigin="anonymous"
+    ></script>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./responsive.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="header-all">
+        <div class="head">
+          <div class="top-logo-img">
+            <img class="burger-menu" src="./img/menu.svg" />
+            <img class="logotip" src="img/logo.png" />
+          </div>
+          <div class="HeadSearch">
+            <div class="search">
+              <input class="SearchInput" type="text" placeholder="Search" />
+              <img class="SearchIcon" src="img/751463.png" />
             </div>
+            <ul class="Menu">
+              <li class="MenuItem"><a href="./index.html">Home</a></li>
+              <li class="MenuItem">Company Profile</li>
+              <li class="MenuItem"><a href="./index1.html"></a>Products</li>
+              <li class="MenuItem">Services</li>
+              <li class="MenuItem">R&D</li>
+              <li class="MenuItem"><a href="./index3.html"></a>Contact</li>
+            </ul>
+          </div>
         </div>
-                  <div class="tom">
-                   <img src="image 7.png" alt="" class="tom"></a> 
-                </div>
-                <div class="cont">
-                    <div class="blok">
-                        <div class="text_blok">
-                        <h5>Agridera Fresh Market Tomato Hybrids</h5>
-                        <p>Agridera aims to be one of the world's leading companies in the breeding, production, and marketing of tomato seeds. We  
-                            <br>invest intensively in research and development to provide solutions to growers and consumers in numerous countries around  
-                            <br>the world. In particular, we breed improved disease-resistant cultivars adapted to different markets globally.</p>
-                        <p>Currently, emphasis is placed on combining Tomato Yellow Leaf Curl Virus (TYLCV) and Tomato Spotted Wilt Virus (TSWV)
-                            <br> resistances with other soil borne diseases into superior tomato breeding lines and hybrids. Moreover, comprehensive efforts 
-                            <br>are being undertaken to develop varieties resistance to TBRFV virus (Tomato Brown Rugose Fruit Virus).        
-                        <p>In terms of horticultural traits, breeding is for earliness, different fruit sizes, firmness, red fruit color, flavor, crack resistance,  
-                            <br> shelf life,and high/low temperature fruit set. Combinations of quality features and disease resistance are sought in a variety  
-                            <br>of types, namely round and elongated shapes.</p>
-                        </div>
-                </div>
-                <div class="cont">
-                    <div class="pall">
-                        <img src="Rectangle 27.png" alt="">
-                        <div class="pal">
-                        <p>Agirdera Tomato breeding programs are focusing on three main segments: Greenhouse Indeterminate Tomatoes, Open-field 
-                            <br>Indeterminate Tomatoes, and Bush Type Open-field Tomatoes.</p>
-                    </div>
-                    </div>
-                </div>
-                
-                <div class="select_foot">
-                    <div class="fot">
-                            <div class="tm1">
-                                <div class="text_fot">
-                                    <h4>Greenhouse Tomato Breeding Program</h4>
-                                    <hr style="border: none; height: 2px; background-color: #4f524f; width: 150px;">
-                                    <p>This breeding is aimed for the Spanish and 
-                                        <br>Turkish markets. For single and cluster 
-                                        <br>picks, round fruit shape and resistances of 
-                                        <br>TYLCV, TSWV, Nematodes and FORL 
-                                        <br>(Fusarium oxysporum f.sp. 
-                                        <br>radicis-lycopersici). Some hybrids may 
-                                        <br>include more resistances, such as 
-                                        <br>Cladosporium and Leveillula Taurica (Lv). </p>
-                                </div>
-                        </div>
-                            <div class="tm2">
-                                <div class="text_fot">
-                                    <h4>Open-field Indeterminate Tomatoes</h4>
-                                    <hr style="border: none; height: 2px; background-color: #4f524f; width: 150px;">
-                                    <p>This breeding is for Brazilian, Moroccan, 
-                                        <br>and Turkish markets. The main focus is on 
-                                        <br>large round shape fruits (200 grams plus);
-                                        <br>and resistances of TYLCV, TSWV,
-                                        <br>Nematodes and FORL. In the near future, F3 
-                                        <br>(Fusarium oxysporum f.sp. lycopersici) will 
-                                        <br>be included as basic resistance in our 
-                                        <br>cultivars.</p>
-                                </div>
-                            </div>
-                            <div class="tm3">
-                                <div class="text_fot">
-                                    <h4>Open-field Type Tomatoes</h4>
-                                    <hr style="border: none; height: 2px; background-color: #4f524f; width: 150px;">
-                                    <p>This breeding is for Mediterranean markets. We breed
-                                        <br>round and elongated shapes, standard sizes 
-                                        <br>(140- 180 grams), and beef sizes (min. 180
-                                        <br>grams up to 300 grams and more). We combine
-                                        <br>the resistances of TYLCV, TSWV and Nematodes
-                                        <br>as basic resistances in our hybrids. However,
-                                        <br>some hybrids may includemore resistances, such
-                                        <br>as Cladosporium and Leveillula Taurica (Lv).</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="palpl">
-                        <img src="Rectangle 27.png" alt="">
-                        <div class="papl">
-                        <p>Agridera operates through international and local distributers around the world. </p>
-                </div>
-            </div>
-                </div>
-                    <div class="fot">
-                            <div class="toma1">
-                                <a href="/index2.html"><img src="image 8.png" alt=""></a>
-                                <div class="text_fot">
-                                    <p>TAG 1000 (TAG 853)<br>Tomato Determinate Red Standard Round</p>
-                                </div>
-                            </div>
-                            <div class="toma2">
-                                <a href="/index2.html"><img src="image 9.png" alt=""></a>
-                                <div class="text_fot">
-                                    <p>TAG 1001 (TAG 855)<br>Tomato Determinate Red Standard Round</p>
-                                </div>
-                            </div>
-                            <div class="toma3">
-                                <a href="/index2.html"><img src="image 10.png" alt=""></a>
-                                <div class="text_fot">
-                                    <p>TAG 1002 (TAG 809)<br>Tomato Determinate Red Standard Round</p>
-                                </div>
-                            </div>
-                                <div class="toma4">
-                                    <a href="/index2.html"><img src="image 11.png" alt=""></a>
-                                    <div class="text_fot">
-                                        <p>TAG 1003 (TAG 834)<br>Tomato Determinate Red Standard Round</p>
-                                    </div>
-                                </div>
-                                <div class="toma5">
-                                    <a href="/index2.html"><img src="image 12.png" alt=""></a>
-                                    <div class="text_fot">
-                                        <p>TAG 1004 (TAG 848)<br>Tomato Determinate Red BEEF Round</p>
-                                    </div>
-                                </div>
-                                <div class="toma6">
-                                    <a href="/index2.html"><img src="image 13.png" alt=""></a>
-                                    <div class="text_fot">
-                                        <p>TAG 1006 (TAG 898)<br>Tomato Determinate Red Elongated</p>
-                                    </div>
-                                    <div class="toma7">
-                                        <a href="/index2.html"><img src="image 14.png" alt=""></a>
-                                        <div class="text_fot">
-                                            <p>TAG 1007 (TAG 816)<br>Tomato Determinate Red Elongated</p>
-                                        </div>
-                                    </div>
-                            </div>
-                </div>
-                <footer class="fix">
-                    <div class="links">
-                        <div class="navbar_foot">
-                            <ul>
-                                <a href="/index.html"><li>PROFILE</li></a>
-                                <a href=""><li>MANAGMENT</li></a>
-                                <a href="/index1.html"><li>PRODUCTS</li></a>
-                                <a href=""><li>R&D</li></a>
-                                <a href=""><li>LINKS</li></a>
-                                <a href=""><li>SITEMAP</li></a>
-                                <a href="/index3.html"><li>CONTACT</li></a>
-                            </ul>
-                          </div>
-                          <div class="social">
-                            <ul class="ros">
-                                <a href=""><li><img src="Ico_in.svg" alt="in"></li></a>
-                                <a href=""><li><img src="Ico_inst.svg" alt="instagram"></li></a>
-                                <a href=""><li><img src="Ico_tube.svg" alt="youtube"></li></a>
-                                <a href=""><li><img src="Ico_tw.svg" alt="twitter"></li></a>
-                                <a href=""><li><img src="Ico_fb.svg" alt="facebook"></li></a>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="foter">
-                        <p>AGRIDERA SEEDS & AGRICULTURE LTD. © 2020</p>
-                    </div>
-                </footer>
-            </div>
+      </div>
+      <div class="middle-page">
+        <div class="return-link">
+          <div>
+            <p>
+              <a href="/index1.html">
+                <i class="fa-solid fa-arrow-left"></i>
+                Return to all tomatoes
+              </a>
+            </p>
+          </div>
         </div>
-    </body>
-    </html>
+        <div class="middle-text">
+          <div class="left-text">
+            <h1 style="font-weight: 700">
+              TAG 1002 (TAG 809)<br />
+              <strong style="color: #57984c"
+                >Tomato Determinate Red Standard Round
+              </strong>
+            </h1>
+            <p>
+              <img src="./img/cross.svg" />
+            </p>
+            <div class="red-text">
+              <img src="./img/Group 17.png" />
+              <p>
+                Very high yield and<br />
+                excellent fruits quality!
+              </p>
+            </div>
+            <p class="characteristics"><b>CHARACTERISTICS</b></p>
+            <p><b>Resistance</b></p>
+            <p>HR: ToMV:0-2; Fol: 1,2; Ve/Vd;</p>
+            <p>IR: TYLCV</p>
+            <p class="characteristics"><b>Plant</b></p>
+            <ul>
+              <li><p>Strong vigor that provides good leaf coverage.</p></li>
+              <li><p>Very high productivity with good fruit setting.</p></li>
+              <li><p>Early matured variety.</p></li>
+            </ul>
+            <p class="characteristics"><b>Fruit</b></p>
+            <ul>
+              <li><p>Long shelf life on plant and post harvest.</p></li>
+              <li><p>Nice shiny attractive deep red color.</p></li>
+              <li><p>Average fruit size: 140 – 160 grams.</p></li>
+            </ul>
+          </div>
+          <div class="right-text">
+            <img width="540px" height="498px" src="./img/tomato-3-2.svg" />
+            <div class="download-block">
+              <button>
+                <i class="fa-solid fa-file-pdf fa-2xl"></i>
+                Download PDF
+              </button>
+            </div>
+            <p class="characteristics"><b>Cycle</b></p>
+            <ul>
+              <li><p>Spring</p></li>
+              <li><p>Fall</p></li>
+              <li><p>Winter</p></li>
+            </ul>
+            <p class="characteristics"><b>Color</b></p>
+            <p>Red</p>
+          </div>
+        </div>
+      </div>
+
+      <footer>
+        <div id="footer_first">
+          <div>
+            <ul>
+              <li><a href="#">Profile</a></li>
+              <li><a href="#">Managment</a></li>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">R&D</a></li>
+              <li><a href="#">Links</a></li>
+              <li><a href="#">Sitemap</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+
+          <div id="icons">
+            <a href="#"><img src="./img/Ico_fb.svg" alt="" /></a>
+            <a href="#"><img src="./img/Ico_inst.svg" alt="" /></a>
+            <a href="#"><img src="./img/Ico_tube.svg" alt="" /></a>
+            <a href="#"><img src="./img/Ico_tw.svg" alt="" /></a>
+            <a href="#"><img src="./img/linkedin 5 4.svg" alt="" /></a>
+          </div>
+        </div>
+        <div id="footer_second">
+          <p>AGRIDERA SEEDS & AGRICULTURE LTD. © 2020</p>
+        </div>
+      </footer>
+    </div>
+  </body>
+</html>
