--- a/index3.html
+++ b/index3.html
@@ -1,121 +1,129 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="header.css">
-    <title>Contact</title>
-</head>
-<body>
-    <div class="main">
-        <div class="headepr">
-            <div class="header-wrapped">
-                <a href="#"><img src="logo.png" alt="" class="logo"></a>
-                <div class="menu">
-                    <div class="search">
-                        <input type="text" id="search-input" class="search-input" required>
-                        <span class="search-icon"><img src="751463.png" alt=""></span>
-                      </div>
-                    <div class="navbar">
-                    <ul>
-                        <a href="/index.html"><li>Home</li></a>
-                        <a href=""><li>Company Profile</li></a>
-                        <a href="/index1.html"><li>Products</li></a>
-                        <a href=""><li>Services</li></a>
-                        <a href=""><li>R&D</li></a>
-                        <a href="/index3.html"><li>Contact</li></a>
-                    </ul>
-                </div>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact us</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      async
+      src="https://kit.fontawesome.com/54bb8b5ea5.js"
+      crossorigin="anonymous"
+    ></script>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0"
+    />
+    <link rel="stylesheet" href="./header.css" />
+    <link rel="stylesheet" href="./responsive.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="header-all">
+        <div class="head">
+          <div class="top-logo-img">
+            <img class="burger-menu" src="./img/menu.svg" />
+            <img class="logotip" src="img/logo.png" />
+          </div>
+          <div class="HeadSearch">
+            <div class="search">
+              <input class="SearchInput" type="text" placeholder="Search" />
+              <img class="SearchIcon" src="img/751463.png" />
             </div>
+            <ul class="Menu">
+              <li class="MenuItem"><a href="index.html">Home</a></li>
+              <li class="MenuItem">Company Profile</li>
+              <li class="MenuItem"><a href="./Tomato-All.html">Products</a></li>
+              <li class="MenuItem">Services</li>
+              <li class="MenuItem">R&D</li>
+              <li class="MenuItem">Contact</li>
+            </ul>
+          </div>
         </div>
-        <div class="tom">
-            <img src="image 17.jpg" alt="" class="tom"></a> 
-         </div>
+      </div>
+      <img style="width: 100%; height: 480px" src="./img/image 7.jpg" />
+      <div class="contant-contact">
+        <h1>Contact us</h1>
+        <img style="margin-bottom: 49px" src="./img/xrest.png" />
+        <form class="content-anketa">
+          <div class="left-content">
+            <label>Name *</label><br />
+            <input type="text" required /><br />
+            <label>Company Name</label><br />
+            <input type="text" /><br />
+            <label>Position</label><br />
+            <input type="text" /><br />
+            <label>City</label><br />
+            <input type="text" /><br />
+            <label>Country</label><br />
+            <input type="text" /><br />
+            <label>Telephone</label><br />
+            <input type="tel" /><br />
+            <label>Email *</label><br />
+            <input type="email" required /><br />
+          </div>
+          <div class="right-content">
+            <label>You are a</label><br />
+            <select class="select">
+              <option value="value1">seed producer</option>
+              <option value="value2">tomato picker</option>
+              <option value="value3">grower</option></select
+            ><br />
+            <label>If other, please specify</label><br />
+            <input class="input2" type="text" /><br />
+            <label>You are interested in</label><br />
+            <textarea class="input3" type="text"></textarea><br />
+            <label>Please type this code</label><br />
+            <div class="sumbit-kapcha">
+              <img class="kaptcha" src="img/image 12.png" />
+              <input class="input4" type="text" />
+              <button type="submit">Send message</button>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="our-adress">
+        <div class="our-adress-content">
+          <p class="green">Our Adress</p>
+          <div class="line-adress"></div>
+          <p class="p-obmain">AGRIDERA Seeds & Agriculture Ltd.</p>
+          <p class="p-ob">P.O Box 103,</p>
+          <p class="p-ob">Gedera 70750, Israel.</p>
+          <p class="p-ob">Telephone: <span>+972 8 944 9222</span></p>
+        </div>
+      </div>
+      <footer>
+        <div id="footer_first">
+          <div>
+            <ul>
+              <li><a href="#">Profile</a></li>
+              <li><a href="#">Managment</a></li>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">R&D</a></li>
+              <li><a href="#">Links</a></li>
+              <li><a href="#">Sitemap</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
 
-         <div class="content">
-            <div class="bloc">
-                <div class="text_bloc">
-                <h10>Contact us</h10>
-                </div>
-            </div>
-            <div class="contact">
-                <div class="dan">
-                    <p>Name*<br><input name="name" size="30">
-                </div>
-                <div class="dan">
-                    <p>Company Name<br><input name="name" size="30">
-                </div>
-                <div class="dan">
-                    <p>Position<br><input name="position" size="30">
-                </div>
-                <div class="dan">
-                    <p>City<br><input name="city" size="30">
-                </div>
-                <div class="dan">
-                    <p>Country<br><input name="country" size="30">
-                </div>
-                <div class="dan">
-                    <p>Telephone<br><input name="phone" size="9" maxlength="9">
-                </div>
-                <div class="dan">
-                    <p>Email*<br><input name="email" size="48">
-                </div>
-                <div class="dan">
-                    <td><p>You are a<br><select name=“select” size=3 multiple>
-                        <option selected value="s1">speed producer</option>
-                                <option value="s2">tomato picker</option>
-                                <option value="s3">grower</option>
-                                </select>
-                </div>
-                <div class="dan">
-                    <p>If other, please specify<br><input name="name" size="30">
-                </div>
-                <div class="dan">
-                    <p>You are interested in<br><textarea name=“coment”></textarea>
-                </div>
-                <div class="dan">
-                    <p>Please type this code<br>7CJ3<input type="search" name="s1"><input type=submit value="Send Message"></td>
-                        </div>
-                </div>
-            </div>
-                    <div class="cn">
-                            <div class="cn_t">
-                                <h11>Our Address</h11>
-                                <hr style="border: none; height: 2px; background-color: #418036; width: 165px;">
-                                <p>AGRIDERA Seeds & Agriculture Ltd.
-                                    <br> P.O Box 103,
-                                    <br>Gereda 70750, Israel.
-                                    <br> Telephone: +972 8 944 9222
-                                </p>
-                            </div>
-                        </div>
-         <footer class="fix">
-            <div class="links">
-                <div class="navbar_foot">
-                    <ul>
-                        <a href="/index.html"><li>PROFILE</li></a>
-                        <a href=""><li>MANAGMENT</li></a>
-                        <a href="/index1.html"><li>PRODUCTS</li></a>
-                        <a href=""><li>R&D</li></a>
-                        <a href=""><li>LINKS</li></a>
-                        <a href=""><li>SITEMAP</li></a>
-                        <a href="/index3.html"><li>CONTACT</li></a>
-                    </ul>
-                  </div>
-                  <div class="social">
-                    <ul class="ros">
-                        <a href=""><li><img src="Ico_in.svg" alt="in"></li></a>
-                        <a href=""><li><img src="Ico_inst.svg" alt="instagram"></li></a>
-                        <a href=""><li><img src="Ico_tube.svg" alt="youtube"></li></a>
-                        <a href=""><li><img src="Ico_tw.svg" alt="twitter"></li></a>
-                        <a href=""><li><img src="Ico_fb.svg" alt="facebook"></li></a>
-                    </ul>
-                </div>
-            </div>
-            <div class="foter">
-                <p>AGRIDERA SEEDS & AGRICULTURE LTD. © 2020</p>
-            </div>
-        </footer>
+          <div id="icons">
+            <a href="#"><img src="./img/Ico_fb.svg" alt="" /></a>
+            <a href="#"><img src="./img/Ico_inst.svg" alt="" /></a>
+            <a href="#"><img src="./img/Ico_tube.svg" alt="" /></a>
+            <a href="#"><img src="./img/Ico_tw.svg" alt="" /></a>
+            <a href="#"><img src="./img/linkedin 5 4.svg" alt="" /></a>
+          </div>
+        </div>
+        <div id="footer_second">
+          <p>AGRIDERA SEEDS & AGRICULTURE LTD. © 2020</p>
+        </div>
+      </footer>
     </div>
-</div>
-</body>
+  </body>
 </html>
